syntax = "proto3";
option go_package="./pb";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service AuthMs {
	// generates a new RefreshToken and a AccessToken
	rpc GetNewRefreshToken(Credentials) returns (Tokens) {}
	
	// after thic call the old tokens should revoked and a new pair of tokens are generated
	rpc ExchangeRefreshToken(RefreshToken) returns (Tokens) {}

	// revoke the refreshToken
	// can e.g. after log out
	rpc RevokeRefreshToken(RefreshToken) returns (google.protobuf.Empty) {}

	// get the user's information based on the accessToken
	rpc GetUser(AccessToken) returns (User) {}
}

message Credentials {
	string username = 1;
	string password = 2;
}

message RefreshToken {
	string token = 1;
	google.protobuf.Timestamp expireTimestamp = 2;
}

message AccessToken {
	string token = 1;
	google.protobuf.Timestamp expireTimestamp = 2;
}

message Tokens {
	RefreshToken refreshToken = 1;
	AccessToken accessToken = 2;
}

message User {
	string id = 1;
}

